--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "private": true,
   "version": "0.1.0",
-  "homepage": "https://pmeharchaithanya.github.io/portfolio",
+  "homepage": "https://pmeharchaithanya.github.io/Portfolio",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,18 +13,18 @@
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.14",
     "gh-pages": "^6.2.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5"
+    "vite": "^4.5.5"
   },
   "dependencies": {
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.8.0",
     "react-type-animation": "^3.2.0",
     "typed.js": "^2.1.0"
   },
